--- a/src/content/chronology-years/2022.yml
+++ b/src/content/chronology-years/2022.yml
@@ -1,20 +1,9 @@
-cms_button_label: 2022 Kronoloji
-year: 2022
+cms_button_label: 2021 Kronoloji
+year: 2021
 is_active: true
 fairs:
-  - name: Plastic Expo Almatı 2022
-    city: Almatı
-    country: Kazakistan
-    sector: Plastik ve Kalıp
-    area: 5,000 m²
-    participants: "120"
-    description: Plastik sanayi fuarı
-    order: 2
-  - name: LeShow Moskova 2022
-    city: Moskova
-    country: Rusya
-    sector: Moda ve Tekstil
-    area: 14,000 m²
-    participants: "380"
-    description: Rusya'nın moda ve tekstil fuarı
-    order: 1
+  - order: 1
+    name: 15.DUBAI WOOD SHOW
+    city: DUBAİ
+    country: BAE
+    sector: ULUSLARARASI AHŞAP VE AĞAÇ İŞLEME MAKİNELERİ ENDÜSTRİSİ FUARI
