feat: Tüm kronoloji yılları yeni field yapısına güncellendi

--- a/src/content/chronology-years/2023.yml
+++ b/src/content/chronology-years/2023.yml
@@ -2,27 +2,39 @@ cms_button_label: "2023 Kronoloji"
 year: 2023
 is_active: true
 fairs:
-  - name: "Fashion Week İstanbul 2023"
-    city: "İstanbul"
-    country: "Türkiye"
+  - name_tr: "Fashion Week İstanbul 2023"
+    name_en: "Fashion Week Istanbul 2023"
+    city_tr: "İstanbul"
+    city_en: "Istanbul"
+    country_tr: "Türkiye"
+    country_en: "Turkey"
     sector: "Moda ve Tekstil"
     area: "12,000 m²"
     participants: "320"
-    description: "Türkiye'nin prestijli moda fuarı"
+    description_tr: "Türkiye'nin prestijli moda fuarı"
+    description_en: "Turkey's prestigious fashion fair"
     order: 1
-  - name: "HomeDeco Almatı 2023"
-    city: "Almatı"
-    country: "Kazakistan"
+  - name_tr: "HomeDeco Almatı 2023"
+    name_en: "HomeDeco Almaty 2023"
+    city_tr: "Almatı"
+    city_en: "Almaty"
+    country_tr: "Kazakistan"
+    country_en: "Kazakhstan"
     sector: "Ev Tekstili ve Dekorasyon"
     area: "8,000 m²"
     participants: "180"
-    description: "Orta Asya'nın ev dekorasyonu fuarı"
+    description_tr: "Orta Asya'nın ev dekorasyonu fuarı"
+    description_en: "Central Asia's home decoration fair"
     order: 2
-  - name: "Security Expo Moskova 2023"
-    city: "Moskova"
-    country: "Rusya"
-    sector: "Güvenlik Sistemleri"
+  - name_tr: "Security Expo Moskova 2023"
+    name_en: "Security Expo Moscow 2023"
+    city_tr: "Moskova"
+    city_en: "Moscow"
+    country_tr: "Rusya"
+    country_en: "Russia"
+    sector: "Deri Fuarları & Güvenlik Sistemleri Fuarları"
     area: "6,000 m²"
     participants: "150"
-    description: "Güvenlik teknolojileri fuarı"
+    description_tr: "Güvenlik teknolojileri fuarı"
+    description_en: "Security technologies fair"
     order: 3
