--- a/src/content/chronology-years/2024.yml
+++ b/src/content/chronology-years/2024.yml
@@ -2,11 +2,15 @@ cms_button_label: "2024 Kronoloji"
 year: 2024
 is_active: true
 fairs:
-  - name: LeShow Moskova 2024
-    city: Moskova
-    country: Rusya
-    sector: Deri ve Kürk
-    area: 15,000 m²
+  - name_tr: "LeShow Moskova 2024"
+    name_en: "LeShow Moscow 2024"
+    city_tr: "Moskova"
+    city_en: "Moscow"
+    country_tr: "Rusya"
+    country_en: "Russia"
+    sector: "Moda ve Tekstil"
+    area: "15,000 m²"
     participants: "450"
-    description: Rusya'nın en büyük deri ve kürk fuarı
+    description_tr: "Rusya'nın en büyük moda ve tekstil fuarı"
+    description_en: "Russia's largest fashion and textile fair"
     order: 1
